# mrhash

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: index.html
mrhash/: CMakeLists.txt
mrhash/apps/: CMakeLists.txt  eval_reconstruction.py  kitti_runner.py  ply_runner.py  rgbd_gs_runner.py  rgbd_runner.py  rosbag_runner.py  streamer_example.cu
mrhash/apps/utils/: camera.py  depth_reader.py  eval_utils.py  kitti_reader.py  labels.py  parse_calib_file.py  parse_tum_trajectory.py  ply_reader.py  point_cloud2.py  ros_reader.py  semantic_segmentation.py
mrhash/configurations/: maicity.cfg  newer_college.cfg  params.json  replica.cfg  scannet.cfg  streamer_example.cfg  vbr.cfg
mrhash/src/: CMakeLists.txt
mrhash/src/gs/: CMakeLists.txt  gaussian.cu  gaussian.cuh  gaussian_utils.cuh  loss_utils.cuh  quad_tree.cu  quad_tree.cuh  rasterize_points.cu  rasterize_points.cuh  rasterizer.cu  rasterizer.cuh  render_utils.cuh
mrhash/src/gs/cuda_rasterizer/include/: auxiliary.h  rasterizer.h  serialization.h
mrhash/src/gs/cuda_rasterizer/src/: backward.cu  forward.cu  rasterizer_impl.cu
mrhash/src/sdf/: CMakeLists.txt  bit_array.h  camera.cu  camera.cuh  cuda_algebra.cuh  cuda_math.cuh  cuda_matrix.cuh  cuda_matrix_conversion.cuh  cuda_utils.cuh  gaussian_data_structures.cpp  gaussian_data_structures.cu  gaussian_data_structures.cuh  geowrapper.cpp  geowrapper.h  marching_cubes.cu  marching_cubes.cuh  mesh_extractor.cpp  mesh_extractor.cu  mesh_extractor.cuh  params.h  serializer.h  streamer.cpp  streamer.cu  streamer.cuh  voxel_data_structures.cpp  voxel_data_structures.cu  voxel_data_structures.cuh  voxel_hash_utils.cuh
mrhash/src/sdf/pybind/: CMakeLists.txt  pygeowrapper.cpp
mrhash/src/sdf/surface_normal_estimator/: mad_tree.cpp  mad_tree.h
mrhash/src/sdf/utils/: cista.h  point_cloud.h  point_cloud_serializer.h  utils.h
mrhash/tests/: CMakeLists.txt  test_algebra_operations.cu  test_cuda_matrix.cu  test_grid_serializer.cu  test_hash_utils.cu  test_marching_cubes.cpp  test_projections.cu  test_streamer.cu  test_utils.cuh
